# agent-core

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README.zh.md  except-baseline.json  pyproject.toml  test-ci.md
.claude/: settings.json
.claude/rules/: architecture.md  code-style.md  error-codes.md  git-workflow.md  karpathy-principles.md  logging.md  prompt-tool-rails.md  security.md  testing.md
.claude/rules/python/: coding-style.md  security.md  testing.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/security-review/: SKILL.md  checklist.md
.claude/skills/verification-loop/: SKILL.md
.semgrep/: no-silent-except.yml
deploy/observability/: README.md  docker-compose.yml  otel-collector-config.yaml  upload_traces_to_langfuse.py
docs/: README.md
docs/design11/: context-engine-compression-refactor_code.md
docs/dev/session/: vcs_design_cn.md
docs/en/: SUMMARY.md  SUMMARY.md.tmp
docs/en/2.Development Guide/: Tool permissions and host integration.md
docs/zh/: SUMMARY.md
docs/zh/2.开发指南/: Makefile.md  工具权限防护.md
examples/: .env.example  README.md
examples/a2a/: client_jiuwen_to_open_a2a_sdk_server.py  client_local_agent_delegates_remote_a2a.py  client_open_a2a_sdk_three_jiuwen_servers.py  client_open_a2a_sdk_to_jiuwen_server.py  example_utils.py  server_local_agent_delegates_remote_a2a.py  server_open_a2a_sdk_jsonrpc_echo.py  server_openjiuwen_a2a_for_sdk_client.py  server_three_openjiuwen_agents_a2a.py
examples/agent_evolving/: evaluator_pipeline_example.py  react_agent_evolving.py  team_skill_create_rail_example.py  team_skill_rail_example.py
examples/agent_teams/: _e2e_utils.py  agent_team_e2e.py  agent_team_hitt_blast_furnace_e2e.py  agent_team_hitt_phase2_e2e.py  agent_team_model_pool_e2e.py  agent_team_observability_e2e.py  agent_team_runner_owner_e2e.py  config.yaml  config_hitt_blast_furnace.yaml  config_model_pool.yaml  logging.yaml  run_interactive_team_cli.sh
examples/context_engine/: compression_deepagent_demo.py  forked_compression_deepagent_demo.py  rule_compression_fixtures.py
examples/context_evolver/: quickstart.py  quickstart_hierarchical_team_rail.py  quickstart_rail.py
examples/graph_memory/: .env.example  showcase_graph_memory.py
examples/graph_memory/memory_data/: dataloader.py
examples/graph_memory/utils/: config.py  visualize_kg.py
examples/groups/hierarchical_group/: __init__.py  config.py  hierarchical_group.py  hierarchical_group_controller.py
examples/harness/: deepagent_with_worktree.py  demo_file_delete_history.py
examples/harness/worktree/: single_deepagent_e2e.py
examples/intelli_router/: intelliRouter_demo.py  observability_demo.py
examples/interact/: weather_assistant_interact.ipynb
examples/jiuwenrl_online/: README.md  run_online_rl.py
examples/lsp/: deep_agent_lsp_demo.py  diagnostic_lsp_demo.py
examples/lsp/agent_workspace/: AGENT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md
examples/lsp/sample_code/: __init__.py  diagnostic_params.py  main.py  models.py  pyproject.toml  test.py
examples/lsp/sample_code/services/: calculator.py
examples/mcp/: README.md
examples/mcp/openapi/: client_as_resources_runner.py  client_as_tool.py  client_as_workflow.py  client_direct.py  openapi.yaml  server.py
examples/mcp/playwright/: client_as_resources_runner.py  (+4 more)
examples/mobile_gui/: .env.example  README.md  example_utils.py  run_mobile_gui_agent.py  run_mobile_gui_agent_with_skills.py  run_mobile_gui_subagent.py  trajectory_model_utils.py
examples/multi_agent/: __init__.py  group_hybrid.py  group_hybrid_stream_check.py  runtime_hybrid.py  runtime_p2p.py  runtime_pubsub.py  team_hybrid.py  team_hybrid_stream_check.py
examples/permissions/: permission_demo.py
examples/react_agent/: build_react_agent.ipynb
examples/retrieval/: .env.example  chroma_query_expr.py  configs.py  milvus_query_expr.py  showcase_chat_reranker.py  showcase_dashscope_multimodal_embedding.py  showcase_multimodal_embedding.py  showcase_query_rewriter.py  showcase_reranker.py  showcase_text_embedding.py
examples/rl_calculator/: README.md  prompts.py  reward.py  sample_processing.py  tools.py  train.py
examples/rl_nl2sql/: README.md  prepare_data.py  prompts.py  reward.py  sample_processing.py  sql_eval.py  tools.py  train.py
examples/robotic_arm/: main.py  main_subagent.py
examples/security_rail_demo/: README.md  example_config.json
examples/session/: session_controller_p2p.py  session_controller_pubsub.py
examples/skill_create/: README.md  main.py  skill_create_use.py
examples/skill_evaluate/: main.py
examples/skill_use/: README.md  main.py  multimodal_skill_use.py  skill_use.py
examples/store/: .env.example  configs.py  es_vector_store_example.py  graph_scenario_data.py  showcase_milvus_graph_store.py  showcase_obs.py
examples/super_agent/: README.md  __init__.py
examples/workflow_agent/: build_workflow_agent.ipynb
harmonyos/: pyproject.toml
jiuwen/agent/: react_agent.py  workflow_agent.py
jiuwen/graph/: factory.py
openjiuwen/: __init__.py
openjiuwen/agent/: utils.py
openjiuwen/agent_evolving/: __init__.py  constant.py  protocols.py  skill_self_evolution.py  types.py  update_execution.py  utils.py
openjiuwen/agent_teams/: AGENTS.md  CLAUDE.md  __init__.py  constants.py  context.py  factory.py  harness.py  i18n.py  id_generator.py  inbound_render.py  message_template.py  paths.py  runtime_manager.py  timefmt.py  tiny_agent.py  workspace_layout.py  worktree_remote.py
openjiuwen/auto_harness/: __init__.py  agent.py  orchestrator.py  schema.py
openjiuwen/deepagents/: __init__.py  deep_agent.py  deep_agent_event_executor.py  deep_agent_event_handler.py  factory.py
openjiuwen/harness/: __init__.py  deep_agent.py  expert_harness_runtime.py  factory.py  image_modality_probe.py
scripts/: check_except_baseline.py
tests/: conftest_otel.py  log_config.yaml  test_cron_prompt_timezone_guidance.py  test_logger.py  test_team_skill_evolution.py
tests/cli/: conftest.py
tests/system_tests/: config_llm_local.example.yaml  llm_config.py
(+5192 files in other folders)
