[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-project"
version = "0.1.0"
description = "Sample project for LSP tool demonstration"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
